offline_dataset_composition.txt
CUDA_VISIBLE_DEVICES: 0
2.4.0
12.4
CUDA is working!
Using device: cuda
58 58
(1372, 4) (1372, 256, 15)
==============================================================================
amd_epyc7543_2s_2n 1372
(np.float64(12.0),) 357
(np.float64(11.0),) 210
(np.float64(44.0),) 154
(np.float64(45.0),) 154
(np.float64(16.0),) 315
(np.float64(13.0),) 182
yrayhan@gilbreth-fe01:[L-PMOSS] $ ./run_skx.sh
CUDA_VISIBLE_DEVICES: 0
2.4.0
12.4
CUDA is working!
Using device: cuda
78 78
94 94
46 46
58 58
68 68
(1491, 4) (1491, 256, 15)
==============================================================================
intel_skx_4s_8n 1491
(np.float64(12.0),) 315
(np.float64(11.0),) 266
(np.float64(13.0),) 280
(np.float64(44.0),) 224
(np.float64(45.0),) 203
(np.float64(16.0),) 203
(1848, 4) (1848, 256, 15)
==============================================================================
ibm_power_2s_2n 1848
(np.float64(16.0),) 329
(np.float64(44.0),) 343
(np.float64(45.0),) 343
(np.float64(12.0),) 280
(np.float64(11.0),) 133
(np.float64(34.0),) 140
(np.float64(27.0),) 140
(np.float64(28.0),) 140
(1820, 4) (1820, 256, 15)
==============================================================================
amd_epyc7543_2s_8n 1820
(np.float64(44.0),) 336
(np.float64(45.0),) 329
(np.float64(12.0),) 343
(np.float64(16.0),) 252
(np.float64(11.0),) 203
(np.float64(13.0),) 357
(1372, 4) (1372, 256, 15)
==============================================================================
amd_epyc7543_2s_2n 1372
(np.float64(12.0),) 357
(np.float64(11.0),) 210
(np.float64(44.0),) 154
(np.float64(45.0),) 154
(np.float64(16.0),) 315
(np.float64(13.0),) 182
(1099, 4) (1099, 256, 15)
==============================================================================
nvidia_gh_1s_1n 1099
(np.float64(44.0),) 154
(np.float64(45.0),) 154
(np.float64(11.0),) 224
(np.float64(12.0),) 210
(np.float64(16.0),) 217
(np.float64(13.0),) 140
yrayhan@gilbreth-fe01:[L-PMOSS] $ ./run_skx.sh
Traceback (most recent call last):
  File "/home/yrayhan/works/L-PMOSS/run_dt_place.py", line 4, in <module>
    from mingpt.utils import set_seed
  File "/home/yrayhan/works/L-PMOSS/mingpt/utils.py", line 7, in <module>
    from yr_utils import find_correct_max_tput
  File "/home/yrayhan/works/L-PMOSS/yr_utils.py", line 2025
    int total_samples = 0
        ^^^^^^^^^^^^^
SyntaxError: invalid syntax
yrayhan@gilbreth-fe01:[L-PMOSS] $ ./run_skx.sh
CUDA_VISIBLE_DEVICES: 0
2.4.0
12.4
CUDA is working!
Using device: cuda
78 78
94 94
46 46
58 58
68 68
==============================================================================
==============================================================================
==============================================================================
==============================================================================
==============================================================================
==============================================================================
intel_skx_4s_8n 1491
(np.float64(12.0),) 4.128440366972478 %
(np.float64(11.0),) 3.486238532110092 %
(np.float64(13.0),) 3.669724770642202 %
(np.float64(44.0),) 2.9357798165137616 %
(np.float64(45.0),) 2.6605504587155964 %
(np.float64(16.0),) 2.6605504587155964 %
==============================================================================
ibm_power_2s_2n 1848
(np.float64(16.0),) 4.3119266055045875 %
(np.float64(44.0),) 4.495412844036697 %
(np.float64(45.0),) 4.495412844036697 %
(np.float64(12.0),) 3.669724770642202 %
(np.float64(11.0),) 1.743119266055046 %
(np.float64(34.0),) 1.834862385321101 %
(np.float64(27.0),) 1.834862385321101 %
(np.float64(28.0),) 1.834862385321101 %
==============================================================================
amd_epyc7543_2s_8n 1820
(np.float64(44.0),) 4.4036697247706424 %
(np.float64(45.0),) 4.3119266055045875 %
(np.float64(12.0),) 4.495412844036697 %
(np.float64(16.0),) 3.302752293577982 %
(np.float64(11.0),) 2.6605504587155964 %
(np.float64(13.0),) 4.678899082568807 %
==============================================================================
amd_epyc7543_2s_2n 1372
(np.float64(12.0),) 4.678899082568807 %
(np.float64(11.0),) 2.7522935779816518 %
(np.float64(44.0),) 2.0183486238532113 %
(np.float64(45.0),) 2.0183486238532113 %
(np.float64(16.0),) 4.128440366972478 %
(np.float64(13.0),) 2.385321100917431 %
==============================================================================
nvidia_gh_1s_1n 1099
(np.float64(44.0),) 2.0183486238532113 %
(np.float64(45.0),) 2.0183486238532113 %
(np.float64(11.0),) 2.9357798165137616 %
(np.float64(12.0),) 2.7522935779816518 %
(np.float64(16.0),) 2.8440366972477067 %
(np.float64(13.0),) 1.834862385321101 %